changed the style for the main page, to avoid issues on smaller screens. Also, filter out mpas you own from maps you participate in.

--- a/app/rpg_battlemap/priv/www/css/override.css
+++ b/app/rpg_battlemap/priv/www/css/override.css
@@ -9,6 +9,7 @@
     min-height: 20px;
     font-size: 15px;
     line-height: 14px;
+	padding-bottom: 2px;
 }
 
 .navbar.navbar-small .brand
